--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -2,7 +2,8 @@
     <div class="container">
         <div class="row">
             <div class="offset">
-            <div class="panel border bg-white">
+            <div class="panel border bg-grey">
+                <h3 class="header">ONLINE CRICKET CLUB</h3>
                 <div class="panel-heading">
                     <h3 class="pt-3 font-weight-bold">Login</h3>
                     <fa-icon [icon]="faLock" class="fa-3x"></fa-icon>
