--- a/src/app/forgot-password/forgot-password.component.html
+++ b/src/app/forgot-password/forgot-password.component.html
@@ -3,7 +3,7 @@
         <div class="card my-auto shadow ">
             <div class="card-body p-5">
                 <div class="text-center">
-                    <fa-icon class="fa-3x"></fa-icon>
+                    <fa-icon [icon]="faLock" class="fa-3x"></fa-icon>
                 </div>
                 <div class ="text-center">
                     <h2>Forgot password</h2>
