--- a/src/app/mean/mean.component.html
+++ b/src/app/mean/mean.component.html
@@ -1,9 +1,6 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-warning navs">
     <div class="container">
-  
-      <a class="navbar-brand" href="#"><img src="./assetcrick.jpg " class="w-50" alt=""></a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
-        aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
@@ -29,11 +26,8 @@
             <a class="nav-link fs-5 fw-bolder" href="#">Login</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link fs-5 fw-bolder" href="#">signup</a>
+            <a class="nav-link fs-5 fw-bolder"routerLink="/signup" href="#">signup</a>
           </li>
-          
-          
-  
   
         </ul>
         <form class="d-flex ">
@@ -52,3 +46,4 @@
       </div>
     </div>
   </nav>
+ 
