--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,10 +1,16 @@
+<html>
+    <head>
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    </head>
+    
 <div class="outer">
     <div class="container">
         <div class="row">
             <div class="offset">
             <div class="panel border bg-grey">
-                <h3 class="header">ONLINE CRICKET CLUB</h3>
+                <div class="header h-100">ONLINE CRICKET COACHING</div>
                 <div class="panel-heading">
+                    <img src="/assets/mean.jpeg" width="500" height="300">
                     <h3 class="pt-3 font-weight-bold">Login</h3>
                     <fa-icon [icon]="faLock" class="fa-3x"></fa-icon>
                 </div>
@@ -38,3 +44,4 @@
         </div>
     </div>
 </div>
+</html>
