--- a/src/app/mean/mean.component.html
+++ b/src/app/mean/mean.component.html
@@ -13,11 +13,9 @@
           <li class="nav-item">
             <a class="nav-link fs-5 fw-bolder" href="#">About</a>
           </li>
+       
           <li class="nav-item">
-            <a class="nav-link fs-5 fw-bolder" href="#">Coaches</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link fs-5 fw-bolder" href="#">Timing</a>
+            <a class="nav-link fs-5 fw-bolder" routerLink="/courses" href="#">Courses</a>
           </li>
   
           <li class="nav-item">
@@ -35,19 +33,7 @@
           
   
         </ul>
-        <form class="d-flex ">
-          <input class="form-control  " type="search" placeholder="Search" aria-label="Search">
-          <button class="btn btn-outline-light  rounded-circle ms-3" type="submit"><i
-              class="fa-solid fa-magnifying-glass"></i></button>
-          <button type="button" class="btn btn-outline-light position-relative rounded-circle ms-3">
-            <i class="fa-solid fa-cart-shopping"></i>
-            <span class="position-absolute top-0 start-100 translate-middle badge  bg-danger">
-              0
-              <span class="visually-hidden">unread messages</span>
-            </span>
-          </button>
-  
-        </form>
+       
       </div>
     </div>
   </nav>
