--- a/src/app/signup/signup.component.html
+++ b/src/app/signup/signup.component.html
@@ -4,6 +4,7 @@
             <div class="offset">
             <div class="panel border bg-white">
                 <div class="panel-heading">
+                    <img src="/assets/main (3).jpg">
                   
                     <h3 class="pt-3 font-weight-bold">Signup</h3>
                 </div>
