--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -2,11 +2,15 @@
     <head>
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     </head>
+
+
+
     
 <div class="outer">
     <div class="container">
         <div class="row">
             <div class="offset">
+                <span class="title">  {{title}}</span>
             <div class="panel border bg-grey">
                 <div class="header h-100">ONLINE CRICKET COACHING</div>
                 <div class="panel-heading">
@@ -19,14 +23,14 @@
                         <div class="form-group">
                             <div class="input-field">
                             <span class="fa fa-user"></span>
-                            <input type="text" placeholder="Username">
+                            <input type="text" formControl="username" placeholder="username">
                             </div>
                         </div>
                         <div class="form-group">
                             <div class="input-field1">
                             <span class="fa fa-lock"></span>
-                            <input [type]="type" placeholder="password">
-                            <Span (click)="HideShowPass()" class="fa fa-eye-slash"></Span>
+                            <input [type]="type"  formControl = "password" placeholder="password">
+                           
                             </div>
                         </div>
                         <div class="card-footer text-right">
@@ -37,11 +41,14 @@
                      <div class="text-center pt-4 text-muted">don't have account? <a id="forget " routerLink="/signup">signup</a>
                      </div>
                     </form>
-                   
+                   <p class="ab">Why Cricket Coach Online Courses.</p>
+
+                    <p  class="bc">Complete guidance of how to start playing Cricket with the basics from holding the bat, stance and later on going ahead to the Next level. Can attend 2 LIVE Online Sessions FREE in First 1 Month</p>
                 </div>
             </div>
             </div>
         </div>
     </div>
 </div>
+<app-footer></app-footer>
 </html>
