--- a/src/app/login/login.component.css
+++ b/src/app/login/login.component.css
@@ -1,9 +1,9 @@
 .outer{
     height:100vh;
-    background:linear-gradient(to top,#c9c9ff 50%, #6e6ef6 90%) no-repeat;
+    background:#434343 no-repeat;
 }
 .panel-heading {
-    text-align:center; 
+    text-align:center;
     margin-bottom:10px;
 }
 .forget{
@@ -51,7 +51,7 @@ a:hover{
     border:1px solid #ddd;
     color:#434343;
 
-   
+
 
 }
 input[type='text'],
@@ -81,14 +81,14 @@ input[type='password']{
     font-size: large;
     text-align: center;
     font-weight: bold;
-    background-color: #434343;
+    background-color: #555;
     background-image:url("/assets/crick.jpg");
 
 
 }
 .ab
 {
-    background-color:white;
-    font-family: sans-serif;
+    background-color:yellowgreen;
+    font-family: #444;
 
 }
