--- a/src/app/mean/mean.component.html
+++ b/src/app/mean/mean.component.html
@@ -4,37 +4,32 @@
         <span class="navbar-toggler-icon"></span>
       </button>
       <span class="title">   {{title}}   </span>
+
+
+
+      <h1 class="text-center">How to get Good coaches<span class="highlight"></span></h1>
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
           <li class="nav-item">
-            <a class="nav-link fs-5 fw-bolder" href="#">Home</a>
-        
+            <img src="/assets/crick.jpg">
+
+            <li class="nav-item">
+              <a class="nav-link fs-5 fw-bolder" routerlink ="/mean"href="#">Home</a>
+            </li>
+
+          <li class="nav-item">
+            <a class="nav-link fs-5 fw-bolder" routerLink="/login">Login</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link fs-5 fw-bolder" href="#">About</a>
-          </li>
-       
-          <li class="nav-item">
-            <a class="nav-link fs-5 fw-bolder" routerLink="/courses" href="#">Courses</a>
-          </li>
-  
-          <li class="nav-item">
-            <a class="nav-link fs-5 fw-bolder" routerlink="/contact" href="#">contact</a>
+            <a class="nav-link fs-5 fw-bolder"routerLink="/signup" >Signup</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link fs-5 fw-bolder" href="#">Login</a>
+            <a class="nav-link fs-5 fw-bolder"routerLink="/admin-dashboard" >Admin-dashboard</a>
           </li>
-          <li class="nav-item">
-            <a class="nav-link fs-5 fw-bolder"routerLink="/signup" href="#">signup</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link fs-5 fw-bolder"routerLink="/admin-dashboard" href="#">Admin-dashboard</a>
-          </li>
-          
-  
+
+
         </ul>
-       
+
       </div>
     </div>
   </nav>
- 
