--- a/src/app/mean/mean.component.css
+++ b/src/app/mean/mean.component.css
@@ -1,7 +1,19 @@
 .title{
-    font-size: larger;
-    font-weight: 100;
-    text-align: left;
-    font-family: sans-serif;
-    background-color: bisque;
+  font-size: larger;
+  font-weight: 100;
+  text-align: left;
+  font-family: sans-serif;
+  background-color: bisque;
 }
+
+.ab
+{
+background-color: black;
+background-size:100% ;
+background-image: linear-gradient(border-radius);
+}
+/* .outer
+{
+background-image: url("/assets/ab.jpg");
+
+} */
