--- a/src/app/coaches/coaches.component.html
+++ b/src/app/coaches/coaches.component.html
@@ -1,16 +1,70 @@
+
 <div class="container mt-5 mb-5">
 
   <div class="row">
 
+    <h1>Ravi Shasthri</h1>
+<h3><b>Batting coach</b></h3>
+    <div class="ab">
+    <!-- <h2> RATING</h2>
+    <p>5/4</p> -->
+  </div>
+  <div class=" mt-3 mb-3">
+              <img src="/assets/shasthri.jpg " width="400"height="300">
 
-          <div class="foodbox mt-3 mb-3">
-              <img src="{{fd.foodImg}}">
-              <h1>{{fd.foodName}}</h1>
-              <p>{{fd.foodDetails}}</p>
-              <p>{{fd.foodPrice | currency:'INR'}}</p>
               <br/>
-              <a class="buybtn" [routerLink]="['/menu',fd.id]">Buy Now &nbsp;<i class="bi bi-bag"></i></a>
+              <a href="ravishathri.com">Select coaches</a>
+
+
+
           </div>
+
+  <div class="row">
+
+    <h1>Symmonds</h1>
+
+    <p><b>Batting coach</b></p>
+
+          <div class=" mt-3 mb-3">
+              <img src="/assets/coaches.jpg " width="400"height="300">
+
+
+              <br/>
+              <a href="ravishathri.com">Select coaches</a>
+
+          </div>
+
+  <div class="row">
+
+    <h1>Mornie Morkel</h1>
+
+    <p><b>Bowling coach</b></p>
+
+          <div class=" mt-3 mb-3">
+              <img src="/assets/morkel.jpg " width="400"height="300">
+
+
+              <br/>
+              <a href="ravishathri.com">Select coaches</a>
+          </div>
+
+  <div class="row">
+
+    <h1>Alexander</h1>
+
+    <p><b>Batting coach</b></p>
+
+          <div class=" mt-3 mb-3">
+              <img src="/assets/alex.jpg " width="400"height="300">
+
+
+              <br/>
+              <a href="ravishathri.com">Select coaches</a>
+          </div>
+
+
+
+
 
       </div>
 
