--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -14,11 +14,11 @@
       <div class="container">
           <div class="row">
               <div class="offset">
-              <div class="panel border bg-grey">
+              <div class="panel">
                   <div class="header h-100"></div>
                   <div class="panel-heading">
-                      <img src="/assets/pq.jpg" width="500" height="300">
-                      <h3 class="pt-3 font-weight-bold"></h3>
+                      <!-- <img src="/assets/pq.jpg" width="500" height="300"> -->
+                      <h1 class="pt-3 font-weight-bold">Login</h1>
 
                   </div>
                   <div class="panel-body">
@@ -37,7 +37,7 @@
 
         <small><a routerLink="../forgot-password">Forget Password</a></small>
      </div>
-  <div class="text-center pt-4 text-muted">don't have account? <a id="forget " routerLink="/signup">signup</a>
+  <div class="text-center pt-4 text-muted">don't have account? <a id="forget " routerLink="">signup</a>
   </div>
       </div>
 
