--- a/src/app/mean/mean.component.html
+++ b/src/app/mean/mean.component.html
@@ -3,22 +3,23 @@
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent">
         <span class="navbar-toggler-icon"></span>
       </button>
-      <span class="title">   {{title}}   </span>
+      <!-- <span class="title">   {{title}}   </span> -->
 
 
 
-      <h1 class="text-center">How to get Good coaches<span class="highlight"></span></h1>
+      <h1 class="text-center"><b>The  Best Coaches in the city<span class="highlight"></span></b></h1>
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
           <li class="nav-item">
-            <img src="/assets/crick.jpg">
+            <!-- <img src="/assets/crick.jpg"> -->   <h3> </h3>
+            <div>
 
             <li class="nav-item">
-              <a class="nav-link fs-5 fw-bolder" routerlink ="/mean"href="#">Home</a>
+              <a class="nav-link fs-5 fw-bolder" routerlink ="/mean"href="#">Signout</a>
             </li>
 
           <li class="nav-item">
-            <a class="nav-link fs-5 fw-bolder" routerLink="/login">Login</a>
+            <a class="nav-link fs-5 fw-bolder" routerLink="/coaches">coaches</a>
           </li>
           <li class="nav-item">
             <a class="nav-link fs-5 fw-bolder"routerLink="/signup" >Signup</a>
@@ -26,10 +27,17 @@
           <li class="nav-item">
             <a class="nav-link fs-5 fw-bolder"routerLink="/admin-dashboard" >Admin-dashboard</a>
           </li>
+            </div>
+          <br>
+         </ul>
 
-
-        </ul>
 
       </div>
     </div>
+
+
+    <div class="head">
+      <img src="/assets/mn.jpg" width="200" height="250"  alt="">
+        <!-- <h1>Choose your Coaches</h1> -->
+      </div>
   </nav>
