--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -1,1 +1,20 @@
-<p>about works!</p>
+<div class="container mt-5 mb-5">
+
+  <h1 class="text-center">About</h1>
+
+  <p> Cricket is a unifying force around the world and ignites a passion in many. It is also a popular career choice for cricket enthusiasts as it gives them an opportunity
+      to indulge their love for the game Criconet has launched e-Coaching (patent applied for)
+       for cricketers who want to learn cricket from square one, and for players who want to improve their game with help from a professional coach.
+        Our core belief is that everyone should be given an opportunity to be the best at what they want to be.
+        We want to make sure everyone who loves cricket has an opportunity to excel at it by making cricket coaching more accessible.
+        We see no reason why a well-deserving cricketer can’t go from being an amateur to a professional and make their dreams come true.
+        Criconet's e-Coaching suits all budgets as well, and our platform focuses on providing an easy access to coaching for potential cricketers everywhere!
+
+
+
+
+
+
+  </p>
+
+</div>
