--- a/src/app/mean/mean.component.html
+++ b/src/app/mean/mean.component.html
@@ -1,43 +1,40 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-warning navs">
-    <div class="container">
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <!-- <span class="title">   {{title}}   </span> -->
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <div class="container-fluid">
+
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="ab">
+    <h1>ONLINE CRICKET COACHING</h1>
+  </div>
+    <div class="collapse navbar-collapse" id="navbarNav">
+      <ul class="navbar-nav ms-auto">
+        <li class="nav-item">
+          <a class="nav-link" routerLink="/about" >HOME</a>
+        </li>
 
 
+        <li class="nav-item">
+          <a class="nav-link" routerLink="/about" routerLinkActive="active-link">ABOUT</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" routerLink="/contact" routerLinkActive="active-link">CONTACT</a>
 
-      <h1 class="text-center"><b>The  Best Coaches in the city<span class="highlight"></span></b></h1>
-      <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
           <li class="nav-item">
-            <!-- <img src="/assets/crick.jpg"> -->   <h3> </h3>
-            <div>
+            <a class="nav-link" routerLink="/coaches" routerLinkActive="active-link">COACHES</a>
 
             <li class="nav-item">
-              <a class="nav-link fs-5 fw-bolder" routerlink ="/mean"href="#">Signout</a>
-            </li>
+              <a class="nav-link" routerLink="/booking" routerLinkActive="active-link">BOOKING</a>
 
-          <li class="nav-item">
-            <a class="nav-link fs-5 fw-bolder" routerLink="/coaches">coaches</a>
+
+
           </li>
           <li class="nav-item">
             <a class="nav-link fs-5 fw-bolder"routerLink="/signup" >Signup</a>
           </li>
-          <li class="nav-item">
-            <a class="nav-link fs-5 fw-bolder"routerLink="/admin-dashboard" >Admin-dashboard</a>
-          </li>
-            </div>
-          <br>
-         </ul>
 
 
-      </div>
+      </ul>
     </div>
-
-
-    <div class="head">
-      <img src="/assets/mn.jpg" width="200" height="250"  alt="">
-        <!-- <h1>Choose your Coaches</h1> -->
-      </div>
-  </nav>
+  </div>
+</nav>
